Rename folder to have bootstrap in vendor
Rename the bootstrap folder to be called vendor.
This gives us a natural place to have any third party javascript and css.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Bootstrap Template">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Scripts -->
-    <script src="js/bootstrap/bootstrap.min.js" defer></script>
+    <script src="js/vendor/bootstrap.min.js" defer></script>
     <script src="js/script.js" defer></script>
 </head>
 <body class="min-vh-100 overflow-y-scroll d-flex flex-column">
