Use bundled javascript
Popper is included in the bundled javascript. Use that to be sure all the components we want to use will work.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Scripts -->
-    <script src="js/vendor/bootstrap.min.js" defer></script>
+    <script src="js/vendor/bootstrap.bundle.min.js" defer></script>
     <script src="js/script.js" defer></script>
 </head>
 <body class="min-vh-100 overflow-y-scroll d-flex flex-column">
